# aoc-2025

./: .gitignore  Cargo.toml
benches/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  day10.rs  day11.rs  day12.rs
src/: lib.rs  main.rs
src/day01/: mod.rs
src/day02/: mod.rs
src/day03/: mod.rs
src/day04/: mod.rs
src/day05/: mod.rs
src/day06/: mod.rs
src/day07/: mod.rs
src/day08/: mod.rs
src/day09/: mod.rs
src/day10/: mod.rs
src/day11/: mod.rs
src/day12/: mod.rs
