[package]
name = "aoc-2025"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
bstr = "1.12.1"
clap = { version = "4.5.53", features = ["derive"] }
fnv = "1.0.7"
itertools = "0.14.0"
mimalloc-rust = "0.2.1"
rayon = "1.11.0"
regex = { version = "1.12.2", features = ["perf-dfa-full"] }

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "day01"
harness = false

[[bench]]
name = "day02"
harness = false

[[bench]]
name = "day03"
harness = false
