[package]
name = "aoc-2025"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
bitvec = "1.0.1"
bstr = "1.12.1"
clap = { version = "4.5.53", features = ["derive"] }
fnv = "1.0.7"
geo = "0.32.0"
itertools = "0.14.0"
mimalloc-rust = "0.2.1"
rayon = "1.11.0"
regex = { version = "1.12.2", features = ["perf-dfa-full"] }
z3 = { version = "0.19.6" }

[dev-dependencies]
criterion = "0.8"

[[bench]]
name = "day01"
harness = false

[[bench]]
name = "day02"
harness = false

[[bench]]
name = "day03"
harness = false

[[bench]]
name = "day04"
harness = false

[[bench]]
name = "day05"
harness = false

[[bench]]
name = "day06"
harness = false

[[bench]]
name = "day07"
harness = false

[[bench]]
name = "day08"
harness = false

[[bench]]
name = "day09"
harness = false

[[bench]]
name = "day10"
harness = false

[[bench]]
name = "day11"
harness = false

[[bench]]
name = "day12"
harness = false